libshpool/src/tui/snapshots/libshpool__tui__view__tests__empty_list_shows_hint.snap
---
source: libshpool/src/tui/view.rs
expression: "render_to_string(&m, 60, 6)"
snapshot_kind: text
---
 shpool sessions (0)                                        
  name  created  active                                     
no sessions                                                 
                                                            
                                                            
 [j] down  [k] up  [spc] attach  [n] new  [d] kill  [q] quit
