libshpool/src/tui/snapshots/libshpool__tui__view__tests__error_replaces_footer.snap
---
source: libshpool/src/tui/view.rs
expression: "render_to_string(&m, 60, 5)"
snapshot_kind: text
---
 shpool sessions (1)                                        
  name  created  active                                     
 >main  30s      30s                                        
                                                            
! daemon gone
